--- a/src/components/pagination/01-css-task/css/style.css
+++ b/src/components/pagination/01-css-task/css/style.css
@@ -8,7 +8,7 @@
 .pagination {
   max-width: 590px;
   height: 40px;
-  margin: 20px auto 0 auto;
+  margin: 20px auto 100px auto;
   display: flex;
   justify-content: center;
   align-items: center;
