--- a/src/components/side-bar/01-css-task/css/style.css
+++ b/src/components/side-bar/01-css-task/css/style.css
@@ -1,10 +1,6 @@
 @import '../../../double-slider/01-css-task/css/style.css';
 @import '../../../filters-list/01-css-task/css/style.css';
 
-.wrapper {
-  width: 280px;
-  min-height: 980px;
-}
 
 hr {
   margin-top: 29px;
@@ -18,6 +14,7 @@ label {
   width: 280px;
   min-height: 980px;
   padding: 1px 19px 21px 21px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
 }
 
 .filters-list {
