--- a/src/components/side-bar/02-js-task/index.html
+++ b/src/components/side-bar/02-js-task/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online Store</title>
-  <link rel="stylesheet" href="./css/main.css">
+  <title>Search-box</title>
+  <link rel="stylesheet" href="../01-css-task/css/style.css">
 </head>
 <body>
-  <div id="root" class="wrapper"></div>
-
-  <script src="./index.js" type="module"></script>
+  <div id="root"></div>
+  <script src="./side-bar.js" type="module"></script>
 </body>
 </html>
