--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <main>
-  <div class="wrapper">
+  <div class="wrapper-pagination">
     <!-- Pagination component -->
 
         <ul class="pagination_box">
