Cards-List & Pagination Update

--- a/src/components/card/01-css-task/card-style.css
+++ b/src/components/card/01-css-task/card-style.css
@@ -9,7 +9,7 @@
   background-color: #fff;
   display: grid;
   align-content: space-between;
-  grid-template-rows: 0.5fr 0.5fr 40px;
+  grid-template-rows: 0.5fr 0.5fr 40px;*/
 }
 
 .os-product-img {
