--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -9,7 +9,7 @@
 
   <style>
     .wrapper {
-      width: 400px;
+      width: 800px;
       margin: 100px auto;
     }
     .os-product-card {
@@ -23,19 +23,18 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import { products } from './products.js';
     import OnlineStorePage from './index.js';
 
+//fetch('https://online-store.bootcamp.place/api/products')
+//.then(response => response.json())
+//.then(products => {
+  const page = new OnlineStorePage();
+  const root = document.querySelector('#root');
 
- const page = new OnlineStorePage(products);
- const root = document.querySelector('#root');
- console.log(root);
-
- root.append(page.element);
-
+  root.append(page.element);
+//})
 
   </script>
-
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
