--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -15,11 +15,11 @@
 <body>
 <main>
 
-  <div class="wrapper d-flex">
+  <div class="wrapper d-flex grid">
 
     <div class="product-card d-flex">
 
-      <img class="product-card-laptop" src="../images-icons/laptop.svg" alt="laptop">
+      <img class="product-card-laptop" src="../images-icons/laptop.svg" alt="">
 
       <div class="product-card-wrapper d-flex">
         <div class="product-card-rating d-flex">
