--- a/src/components/double-slider/02-js-task/index.html
+++ b/src/components/double-slider/02-js-task/index.html
@@ -17,7 +17,7 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import DoubleSlider from './solution/index.js';
+    import DoubleSlider from './index.js';
 
     const slider = new DoubleSlider();
 
