--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -19,7 +19,7 @@
 
     <div class="product-card d-flex">
 
-      <img class="product-card-laptop" src="../images-icons/laptop.svg" alt="laptop">
+      <img class="product-card-laptop" src="../images-icons/laptop.svg" alt="">
 
       <div class="product-card-wrapper d-flex">
         <div class="product-card-rating d-flex">
