--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="blok-rama">
-  <div class="blok-img"><img class="otstup" src="./img/nout.png" alt=""></div>
+  <div class="blok-img"><img class="img-dimen" src="./img/nout.png" alt=""></div>
 
   <div class="blok-zv-cn">
     <div class="blok-zvezda">
