--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -7,8 +7,74 @@
 </head>
 <body>
 <main>
-  <div id="root">
-    <!-- Cart component -->
+  <div class="root">
+    <div class="cart-content">
+      <div class="cart-container">
+        <ul class="cart-list">
+        <li class="cart">
+          <div class="image-cart">
+            <img class="image" src="/src/components/card/Image/laptope.jpg" alt="product-image">
+          </div>
+          <div class="name-cart">
+            <p>Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+           </div>
+          <div class="number-cart">
+            <i class="bi bi-dash-circle"></i>
+            <p>1</p>
+            <i class="bi bi-plus-circle"></i>
+          </div>
+          <div class="total-cart">
+            <p>24000</p>
+            <img class="currency-image" src="/src/components/card/Image/ukraine-hryvnia.png" alt="ukraine-hryvnia">
+          </div>
+        </li>
+
+        <li class="cart">
+          <div class="image-cart">
+            <img class="image" src="/src/components/card/Image/laptope.jpg" alt="product-image">
+          </div>
+          <div class="name-cart">
+            <p>Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+           </div>
+          <div class="number-cart">
+            <i class="bi bi-dash-circle"></i>
+            <p>1</p>
+            <i class="bi bi-plus-circle"></i>
+          </div>
+          <div class="total-cart">
+            <p>24000</p>
+            <img class="currency-image" src="/src/components/card/Image/ukraine-hryvnia.png" alt="ukraine-hryvnia">
+          </div>
+        </li>
+
+        <li class="cart">
+          <div class="image-cart">
+            <img class="image" src="/src/components/card/Image/laptope.jpg" alt="product-image">
+          </div>
+          <div class="name-cart">
+            <p>Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+           </div>
+          <div class="number-cart">
+            <i class="bi bi-dash-circle"></i>
+            <p>4</p>
+            <i class="bi bi-plus-circle"></i>
+          </div>
+          <div class="total-cart">
+            <p>47997</p>
+            <img class="currency-image" src="/src/components/card/Image/ukraine-hryvnia.png" alt="ukraine-hryvnia">
+          </div>
+        </li>
+       </ul>
+
+       <div class="total-sum">
+          <p>Total: 74656</p>
+          <img class="currency-image" src="/src/components/card/Image/ukraine-hryvnia.png" alt="ukraine-hryvnia"></div>
+      </div>
+
+      <div class="bottom-cart">
+        <div class="bottom">ORDER</div>
+      </div>
+    </div>
   </div>
 </main>
 </body>
