--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -14,11 +14,19 @@
   <style>
     /* wrapper для отображения карточки по центру */
     .wrapper {
-      width: 830px;
+      width: 1080px;
+      height: 1370px;
       /* margin: верх право низ лево; расшифровка значений */
-      margin: 100px auto;
-      outline: 1px solid;
+      margin: 0px auto;
+      outline: 2px solid;
     }
+
+    /* os-products-list реализует расположение карточек по строчкам */
+    .os-products-list {
+    padding: 12px;
+    display: flex;
+    flex-wrap: wrap;}
+
   </style>
 </head>
 
