--- a/src/components/pagination/01-css-task/pagination_style_v2.css
+++ b/src/components/pagination/01-css-task/pagination_style_v2.css
@@ -1,5 +1,5 @@
 .osnova {
-  outline: 1px solid;
+  /* outline: 1px solid; */
   width: 650px;
   height: 60px;
   margin: 0 auto;
@@ -8,7 +8,7 @@
   align-items: center;}
 
   .ramka {
-    outline: 1px solid;
+    /* outline: 1px solid; */
     width: 620px;
     height: 50px;
     display: flex;
