--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -13,16 +13,16 @@
     <h3 class="Price-title">Price</h3>
     <div data-element="priceSlider">
       <div class="range-slider range-slider-dragging">
-        <span data-element="from">0 UAH</span>
         <i data-element="thumb-left" class="bi bi-caret-left leftC"></i>
         <div data-element="inner" class="range-slider_inner">
           <span data-element="progress" class="range-slider_progress"></span>
         </div>
         <i data-element="thumb-right" class="bi bi-caret-right rightC"></i>
-        <span data-element="to">100000 UAH</span>
-
       </div>
-
+    </div>
+    <div class="Slider-money">
+      <div class="Money-left">0 UAH</div>
+      <div class="Money-right">9999 UAH</div>
     </div>
   </div>
 </main>
