--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <title>SearchBox component</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Search-box-style.css">
+  <link rel="stylesheet" href="">
 
   <style>
     .wrapper {
@@ -15,8 +16,11 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- SearchBox component -->
+  <div class="Search-box-wrapper">
+   <div class="Search-box">
+    <input type="text" placeholder="Search" class="Input-text">
+    <div class="Search-icon"><i class="bi bi-search"></i></div>
+   </div>
   </div>
 </main>
 </body>
