add fixtures, several fixes

--- a/src/sass/blocks/_filters-list.scss
+++ b/src/sass/blocks/_filters-list.scss
@@ -1,5 +1,5 @@
 .filter {
-  margin-top: 10px;
+  margin-top: 20px;
   display: flex;
   span {
     margin-left: 12px;
@@ -21,6 +21,7 @@ input[type="checkbox"] {
 
 label {
   font-size: 14px;
+  font-weight: 400;
   cursor: pointer;
 }
 
