--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,11 +1,5 @@
-@media (min-width: 576px) {
-  .cards-list {
-    width: 100%;
-  }
-}
-
-@media (min-width: 992px) {
-  .cards-list {
-    width: 990px;
-  }
-}
+// @media (min-width: 576px) {
+//   .cards-list {
+//     width: 100%;
+//   }
+// }
