--- a/src/sass/blocks/_product-card.scss
+++ b/src/sass/blocks/_product-card.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 20px auto 0 auto;
   padding-top: 12px;
   width: 317px;
   height: 411px;
