add filters module, update some folders, several fixes

--- a/src/components/card-list/style.css
+++ b/src/components/card-list/style.css
@@ -7,18 +7,13 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-.card-list-wrapper {
-  margin:100px auto 0 auto;
+.card-list-wrapper .container {
+    margin-top: 0;
 }
 
 .product {
   margin: 20px auto 0 auto;
 }
 
-@media (min-width: 992px) {
-  .card-list-wrapper {
-    width: 990px;
-  }
-}
 
 
