--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="wrapper">
     <div class="search-box">
-      <input type="text" placeholder="Search" id="text-search" class="search">
+      <input type="text" placeholder="Search" id="text-search" class="search-box__search">
     </div>
   </div>
 </body>
