--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -1,14 +1,10 @@
-* {
-  box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
-}
-
 .product {
   width: 317px;
   height: 411px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 20px auto 0 auto;
   padding-top: 12px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
