Search-box-js-in-progress

--- a/src/components/card(done)/02-js-task/index.html
+++ b/src/components/card(done)/02-js-task/index.html
@@ -5,6 +5,7 @@
   <title>Card component</title>
   <link rel="stylesheet" href="./style-pagination.css">
   <link rel="stylesheet" href="./style-CardList.css">
+  <link rel="stylesheet" href="./Search-box-style.css">
 </head>
 
 <body>
