--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -18,8 +18,7 @@
       height: 1370px;
       /* margin: верх право низ лево; расшифровка значений */
       margin: 0px auto;
-      outline: 2px solid;
-    }
+      outline: 2px solid;}
 
     /* os-products-list реализует расположение карточек по строчкам */
     .os-products-list {
